--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/cmbMaterias.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/cmbMaterias.html.twig
@@ -1,4 +1,4 @@
 <label class="control-label" >Materia :</label>
-<select id="idMateria" name="idMateria" required title="Debes seleccionar una materia">   
+<select id="idMateria" name="idMateria" >   
          {{ materia | raw }}                       
  </select> <!---->
