--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listaEstudiantes.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Docentes/listaEstudiantes.html.twig
@@ -4,7 +4,7 @@
 	<script src="{{ asset('js/jqueryValidate/dist/jquery.validate.js') }}"></script>
         <script src="{{ asset('js/jqueryValidate/dist/additional-methods.js') }}"></script>
 {#<link href="{{ asset('bower_components/bootstrap/dist/css/bootstrap.css')}}" type="text/css" rel="stylesheet"/>#}
-<form id="form-listaEstudiantes" name="form-listaEstudiantes" method="post" action="{{ path('docentes_actualiza_asistencia') }}" onsubmit="return false;">     
+<form id="form-listaEstudiantes2" name="form-listaEstudiantes2" method="post" action="{{ path('docentes_actualiza_asistencia') }}" onsubmit="return false;">     
 <div class="row" id="tabla1">
                 <div class="col-xs-12">
                   <div ng-controller="AppCtrl">
@@ -15,59 +15,39 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                           <div class="row" >
-                            <div class="row " style="padding-left: 25px;">
-                                <div class="row" style="padding-top: 25px;width: 43%;">
-                                      <label class="control-label" >Docente :</label>
-                                        <select id="idDocente" name="idDocente" onchange="changeSelect(this.id, '{{ path('admin_cmb_materias') }}')" required title="Debes seleccionar un docente">   
+                            {#<div class="row" style="padding-left: 25px;">#}
+                                <div class="row " >
+                                <div style="padding-top: 25px;" class="col-xs-6">
+                                      <label class="control-label"  >Docente :</label>
+                                        <select id="idDocente" name="idDocente" onchange="changeSelect(this.id, '{{ path('admin_cmb_materias') }}')" >   
                                                  {{ docente | raw }}                       
                                          </select>
                                  </div>
-                                 <div id="content-idDocente" class="row" style="padding-top: 25px;width: 26%;">
+                                 <div id="content-idDocente" class="col-xs-5" style="float:right;padding-top: 25px;">
                                       <label class="control-label" >Materia :</label>
-                                        <select id="idMateria" name="idMateria" required title="Debes seleccionar una materia">   
+                                        <select id="idMateria" name="idMateria" disabled>   
                                                  {{ materia | raw }}                       
                                          </select>
                                  </div>
-                                 <div class="col-xs-2" style="padding-top: 20px;"><button id="consultaAsistencia" class="btn btn-primary" type="button">Consultar</button></div>
-                            </div><!---->
-                            {#<div class="col-lg-3">
-                            55     <label class="control-label" >parcial :</label>
-                                   <select id="combofecha" name="combofecha" onchange="mostrarAlumnos('notas','{{ path('docentes_actualizar_asistencia') }}','2345');" >   
-                                          <option value="1"># 1</option>
-                                            <option value="2"># 2</option>                       
-                                    </select>
-                            </div>#}
+                                 </div>
+                                <div class="center-block" style="display:block;margin-right:auto;margin-left:30%">
+                                 <div class="col-xs-2" style="padding-top: 20px;"><button class="btn btn-primary" type="button" onclick="mostrarAlumnos('listaEstudiantes','{{ path('admin_muestra_estudiantes') }}')">Consultar</button></div>
+                                 <div class="col-xs-2" style="padding-top: 20px;margin-left:15%;">
+                                     <button class="btn btn-primary" type="button" 
+                                             onclick="hrefdocentes('{{ path('admin_cargar_pagina') }}')">Exportar a PDF</button>
+                                 </div>
+                                 </div>
+                            {#</div>#}
                             
-                            <div class="col-lxs-12" style="margin-bottom: 20px;">
+                            <div class="col-xs-12" style="margin-bottom: 20px;">
                                 &nbsp;
                             </div>
-                            <div class="dataTable_wrapper col-xs-12 div-scroll-y" id="content-ingresonota">
-                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-center " style="vertical-align: middle" >Codigo</th>
-                                            <th style="text-align: center;vertical-align: middle">Estudiante</th>
-                                           <th style="text-align: center;vertical-align: middle"></th>
-                                        </tr>
-                                     
-                                    </thead>
-                                    <tbody>
-                                        <input type = "hidden" value = "{{ idCarrera }}" id = "hdCarrera" name = "hdCarrera" />
-                                {%for count ,alumnos in arr_datos %}
-                                       <tr class="odd gradeX">
-                                           <td width = "5%" >{{ alumnos.id_sg_usuario }}</td>
-                                            <td width = "20%">{{ alumnos.nombres }} <input type = "hidden" value = "{{ alumnos.nombres }}" name = "{{ alumnos.id_sg_usuario }}" /></td>
-                                            <td width = "20%"> <span class="button-checkbox">
-                                                                    <button type="button" class="btn" data-color="primary">Asistio</button>
-                                                                    <input type="checkbox" class="hidden" value="{{ alumnos.id_sg_usuario }}" name="{{ alumnos.nombres }}" checked />
-                                                                </span></td>
-                                       </tr>
-                                {% endfor %}
-                                <input type = "hidden" value = "{{arr_datos|length}}" name = "hdcountalm" />
-                                   </tbody>
-                                </table>
-                            </div>
-                                    </div>
+                             <input type = "hidden" value = "{{ idCarrera }}" id = "hdCarrera" name = "hdCarrera" />
+                             <div class="dataTable_wrapper col-xs-12 div-scroll-y" id="content-listaEstudiantes">
+                                 
+                            
+                         </div>
+                        </div>
                             <!-- /.table-responsive -->
                     
                         </div>
@@ -76,13 +56,6 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
-<div class="well">
-     <h4>Nota :</h4>
-     <p>Por su seguridad se recomienda verificar que las asistencias ingresadas sean las correctas</p>
-     <div class="text-center ">
-     <button type="button" class="btn btn-primary" id="btn-guardar" onclick="confirm('actualizaAsis')" >Actualizar</button>
-     </div>
- </div>
                                    <div id="content-ingresonotas">
                                        </div>
 
