--- a/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
+++ b/appAcademico/src/Titulacion/SisAcademicoBundle/Resources/views/Home/menu_principal.html.twig
@@ -100,7 +100,7 @@
             <!-- User image -->
             <li class="user-header">
               <img src="{{ asset('theme/dist/img/user2-160x160.jpg')}}" class="img-circle" alt="User Image">
-              <p>
+              <p>nom_usuario
                 {{app.session.get('nom_usuario')}} - Developer
                 <small>En actividad desde Sept. 2015</small>
               </p>
