--- a/appAcademico/web/theme/main.css
+++ b/appAcademico/web/theme/main.css
@@ -57,3 +57,8 @@ a.tip:hover span {
     top: 20px;
     text-decoration: none
 }
+
+.sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > a > span:not(.pull-right),
+.sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > .treeview-menu{
+  width:260px;
+}
